--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.5",
     "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.24.0",
     "html-webpack-plugin": "^5.3.2",
     "node-sass": "^6.0.1",
     "react-refresh": "^0.10.0",
