--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,20 @@
 {
+    /*yarn add  prettier eslint-config-prettier eslint-plugin-prettier babel-eslint -D*/
     "env": {
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
-    ],
+    "extends": ["eslint:recommended", "airbnb", "prettier/react"],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 12
+        "ecmaVersion": 12,
+        "sourceType": "module"
     },
-    "plugins": [
-        "react", "import"
-    ],
+    "plugins": ["react", "import", "prettier"],
     "rules": {
-
-        "global-require":"off"
+        "global-require": "off",
+        "prettier/prettier": "error"
     }
 }
