--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.5",
+    "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.24.0",
     "html-webpack-plugin": "^5.3.2",
     "node-sass": "^6.0.1",
+    "prettier": "^2.3.2",
     "react-refresh": "^0.10.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
