--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "cross-env NODE_ENV=production"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.15.0",
     "babel-loader": "^8.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -18,6 +19,7 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.5",
+    "@types/react-dom": "^17.0.9",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
@@ -31,6 +33,7 @@
     "react-refresh": "^0.10.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "typescript": "^4.4.2",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
