--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,3 @@
 {
-    /*yarn add  prettier eslint-config-prettier eslint-plugin-prettier babel-eslint -D*/
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": ["eslint:recommended", "airbnb", "prettier/react"],
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": ["react", "import", "prettier"],
-    "rules": {
-        "global-require": "off",
-        "prettier/prettier": "error"
-    }
+  "extends": "next/core-web-vitals"
 }
