--- a/package.json
+++ b/package.json
@@ -1,41 +1,30 @@
 {
-  "name": "01-ProjectGit",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "ignite-shop",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "webpack serve",
-    "build": "cross-env NODE_ENV=production"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@babel/preset-typescript": "^7.15.0",
-    "babel-loader": "^8.2.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@radix-ui/react-dialog": "^1.0.0",
+    "@stitches/react": "^1.2.8",
+    "axios": "^1.1.2",
+    "embla-carousel-react": "^7.0.3",
+    "keen-slider": "^6.8.2",
+    "next": "12.3.1",
+    "phosphor-react": "^1.4.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "stripe": "^10.13.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.5",
-    "@types/react-dom": "^17.0.9",
-    "babel-eslint": "^10.1.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "html-webpack-plugin": "^5.3.2",
-    "node-sass": "^6.0.1",
-    "prettier": "^2.3.2",
-    "react-refresh": "^0.10.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "typescript": "^4.4.2",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
+    "@types/node": "18.8.3",
+    "@types/react": "18.0.21",
+    "eslint": "8.25.0",
+    "eslint-config-next": "12.3.1",
+    "typescript": "^4.8.4"
   }
 }
